# marijuanaDiscordWelcomeCard

./: .breakpoints  README.md  app.py  card_generator.py  main.py  pyproject.toml  replit.nix  requirements.txt
static/css/: custom.css
templates/: index.html
